Fix, hidden horrizontal scrollbar, closes issue #62
The previous fix only worked if your window was bigger than some predefined size (this was defined by the size of the picture), I have now hidden the scroll bar for all sizes

--- a/brewdog_project/frontend/static/css/home.css
+++ b/brewdog_project/frontend/static/css/home.css
@@ -1,6 +1,7 @@
 body, html {
     background-color: #111;
     color: #EEE;
+    overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 /* Landing styles */
